# blog-code

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  STAGE_4_FILES_CREATED.txt  biome.json  ty.toml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  passenger_wsgi.py  pyproject.toml  schema.sql
backend/src/: config.py  main.py  passenger_wsgi.py
backend/src/api/routes/: health.py
backend/src/backend/: config.py  main.py
backend/src/backend/api/routes/: health.py
backend/src/backend/infrastructure/persistence/: database.py  models.py
backend/src/infrastructure/persistence/: database.py  models.py
backend/src/scripts/: create_schema.py  run_dev_server.py
backend/tests/: conftest.py
backend/tests/e2e/: test_build.py  test_database.py  utils.py
backend/tests/integration/: conftest.py  test_api_routes_health.py  test_database.py  test_health_endpoints.py  test_main.py  test_passenger_wsgi.py  test_spa_routing.py
backend/tests/unit/: conftest.py  test_app_factory.py  test_config.py  test_config_production_env_prefix.py  test_database.py  test_main.py  test_models.py  test_passenger_wsgi.py
docs/: DEPLOYMENT.md  api.md
docs/scripts/: INTEGRATION_TEST_REPORT.md  LOGGER_IMPLEMENTATION_GUIDE.md  STAGE_2_SUMMARY.md  STAGE_4_COMPLETION.md  TEST_LOGGER_COVERAGE.md  TEST_SUMMARY.md
frontend/: .env.example  biome.json  package-lock.json  package.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.jsx  main.tsx
frontend/src/pages/: Home.tsx  NotFound.tsx
frontend/src/services/: healthService.js  healthService.ts
frontend/tests/: setup.ts
frontend/tests/mocks/: axios.js  axios.ts
frontend/tests/unit/: App.test.tsx  Home.test.tsx  NotFound.test.tsx  healthService.test.js  healthService.test.ts  main.test.tsx
scripts/: README.md  SECURITY_HARDENING.md  build.sh  deploy.sh  logger.sh  run_tests.sh  uapi.sh  validators.sh
scripts/functions/: provision_database.sh  register_passenger.sh  run_schema.sh  setup_venv.sh  upload_code.sh  verify_deployment.sh
scripts/tests/: build.bats  deploy.bats  deploy_config_fix.bats  test_helper.bash
scripts/tests/fixtures/: mock_ssh_output.txt  mock_uapi_responses.json
tests/: .gitignore  DEPLOYMENT_TESTS_SUMMARY.md  test_logger.bats  test_provision_db.bats  test_register_passenger.bats  test_run_schema.bats  test_setup_venv.bats  test_smoke.bats  test_uapi.bats  test_upload_code.bats  test_validators.bats  test_verify.bats  verify_tests.sh
tests/fixtures/: ssh_failure.txt  ssh_success.txt  uapi_create_database_exists.json  uapi_create_database_success.json  uapi_create_user_exists.json  uapi_create_user_success.json  uapi_error.json  uapi_error_auth.json  uapi_error_invalid_json.txt  uapi_error_network.json  uapi_grant_privileges_success.json  uapi_list_databases_success.json  uapi_list_users_success.json  uapi_mysql_create_database_exists.json  uapi_mysql_create_database_success.json  uapi_mysql_create_user_exists.json  uapi_mysql_create_user_success.json  uapi_mysql_list_databases_with_blog.json  uapi_mysql_list_users_empty.json  uapi_mysql_list_users_with_blog.json  uapi_mysql_set_privileges_success.json  uapi_passenger_list_apps_with_blog.json  uapi_passenger_list_empty.json  uapi_passenger_list_success.json  uapi_passenger_register_app_exists.json  uapi_passenger_register_app_success.json  uapi_passenger_register_success.json  uapi_passenger_restart_app_success.json  uapi_passenger_restart_success.json  uapi_success.json
tests/helpers/: test_helpers.bash
