[project]
authors = [{ name = "Ashlynn Antrobus" }]
dependencies = [
  "flask-cors>=6.0.1",
  "flask>=3.1.2",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.4",
  "requests>=2.32.5",
  "sqlmodel>=0.0.27",
]
description = "Blog platform with Flask + React"
name = "backend"
requires-python = ">=3.13.5"
version = "0.1.0"

[project.scripts]
create-schema = "scripts.create_schema:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest-cov>=7.0.0",
  "pytest>=9.0.0",
  "types-flask-cors>=6.0.0.20250809",
  "types-flask>=1.1.6",
  "types-requests>=2.32.4.20250913",
]

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
python_version = "3.13"
warn_return_any = true

[tool.pytest]
addopts = ["--cov-fail-under=80", "--cov-report=json", "--cov=.", "-rf"]
minversion = "9.0"
pythonpath = ["src"]
testpaths = ["docs", "tests"]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
ignore = ["A002", "ANN003", "ANN204", "ANN401", "D100", "D417"]
select = ["A", "ANN", "D", "E", "F", "I", "N", "UP", "W"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104", "E402"]
"**/{tests,docs,tools}/*" = ["ANN001", "ANN201", "D", "E402"]
"config.py" = ["ANN003", "N802", "N803"]
